@@ -11,6 +11,7 @@ import skills
 import wolfpack
 import whrandom
 from wolfpack.consts import *
+import system.spawns
 
 # max number an animal can be tamed
 MAXTAME = 5
@@ -191,6 +192,19 @@ def callback( char, args ):
 			if totame.hunger < 3:
 				totame.hunger = 3 # Otherwise they go wild again
 			totame.owner = char
+			
+			# Remove the tamed npc from the spawngem system too
+			if totame.hasscript('system.spawns'):
+				if totame.hastag('spawner'):
+					spawner = wolfpack.finditem(totame.gettag('spawner'))
+					if spawner and spawner.hastag('current'):
+						current = int(spawner.gettag('current')) - 1
+						if current <= 0:
+							spawner.deltag('current')
+						else:
+							spawner.settag('current', current)
+					totame.deltag('spawner')
+				totame.removescript('system.spawns')
 
 			# A creature can only be tamed a few times
 			num_tamed = 1
