@@ -17,6 +17,8 @@ Wolfpack 12.9.14 Beta (SVN)
   - Added several socket properties and ignored packet 0xbb.
   - Fatal XML parsing errors no longer crash the server.
   - Added a squelched and a jailed property to player objects.
+  - Added an option to wolfpack.xml for sending ASCII name packets for incoming characters.
+  - Added an option to wolfpack.xml to use post 4.0.8 tooltip packets which are a lot faster.
  * Definition Changes:
   - Bench (0x1049) which was crafted was "unusable"
   - fixed bug #0000381 ("potion_keg" and "potionkeg")
@@ -70,6 +72,7 @@ Wolfpack 12.9.14 Beta (SVN)
   - Added mute, unmute, jail and forgive commands.
   - Added checks to the gate and to recall so players cannot travel to facets their client does not support.
   - Its now possilbe to carve human corpses.
+  - Taming now removes NPCs from spawn gems too.
  * Misc. Changes:
  * Known Issues, Bugs, and Missing Features:
   - Some skills are still incomplete.
